# xcomp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  integrate.sh
.git-hooks/: pre-commit.sh
.github/workflows/: build.yml
preprocessor/: CMakeLists.txt  file_manager.cpp  file_manager.hpp  main.cpp  preprocessor.cpp  preprocessor.hpp  reader.cpp  reader.hpp
tests/: CMakeLists.txt
tests/tools/: CMakeLists.txt  lexer_test.cpp
tests/xcomp/: CMakeLists.txt  string_test.cpp
tools/: debug.hpp  error.hpp  lexer.cpp  lexer.hpp
xcomp/: string.cpp  string.hpp
